# Designi

./: CMakeLists.txt  Design2D.qml  Design3D.qml  MyCube.qml  README.md  main.cpp  main.qml
Controller/: HomeDesignController.cpp  HomeDesignController.h
Model/: AreaToDimensionsCalculator.h  Room.h  RoomBuilder.h  RoomTypes.h
Model/Land/: Land.h  LandDivision.h  LandDivisionBasedOnInnerDesign.cpp  LandNetwork.h
Model/Land/Green Area/: ClusteredGreenSelector.cpp  GreenAreaSelector.h  UniformGreenDistributor.cpp
Model/PolygonLibrary/: LineToPolygonConverter.cpp  LineToPolygonConverter.h  PolygonAdjacencyAnalyzer.cpp  PolygonAdjacencyAnalyzer.h  PolygonHelper.h
Utils/: RoomTypeUtils.h  UniqueIdGenerator.h
View/: DesignResultView.h  JsonExtraction.cpp  JsonExtraction.h  JsonInputView.h  QMLResultView.cpp  QMLResultView.h  UserInputView.h  WallQml.h
